1999-10-17  Michael Natterer  <mitch@gimp.org>

	* app/gimpsignal.[ch]: new GimpSignalType gimp_sigtype_int_int_int.

	* app/gimpcontext.[ch]: set/get colors as separate r/g/b values
	instead of a guchar[3] array.
	The "[foreground|background]_changed" signal handlers must have
	the following signature now:
	color_changed_callback (GimpContext *, gint, gint, gint, gpointer).

1999-10-17  Michael Natterer  <mitch@gimp.org>

	* app/gimpcontext.[ch]: added the possibility to store the current
	tool, FG/BG color, brush, pattern and gradient, but don't use
	these attributes yet.

	Before replacing the get/set color/brush/... functions with
	context functions, I'll have to change the "parent context"
	implementation to something where the children catch the parent's
	color/brush/..._changed signals.
	Finally, updating the indicator_area, device_status, tool_options
	etc. will be done by connecting to their own context's "*_changed"
	signals, which will be much cleaner than calling the update
	functions from various places.

	(I think this is a "consistency fix", please let me know if you
	consider it a new feature).

Sun Oct 17 00:55:38 CEST 1999  Marc Lehmann <marc@gimp.org>

        * (221 files): Corrected ~20 pdb function names by choosing the
        class/selector syntax over the various other syntaxes floating
        around. Maybe more to come before 1.2.

1999-10-16  Michael Natterer  <mitch@gimp.org>

	* app/gimprc.c: preview_size_to_str() uses the new set of preview
	sizes now.

1999-10-16  Michael Natterer  <mitch@gimp.org>

	* app/menus.c: made the "Dialogs" sub-menus of <Toolbox>/File and
	<Image> consistent.

	* app/nav_window.c: wheelmouse support as in the gdisplay shell.

1999-10-16  Michael Natterer  <mitch@gimp.org>

	* app/pattern_select.c: fixed a SEGV: The "refresh" callback
	should call select_pattern(), not pattern_select_select().

1999-10-16  Michael Natterer  <mitch@gimp.org>

	* app/channels_dialog.c: applied gimp-gosgood-991011-0.patch, so